# personal-workflows

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  dbos-config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
harness/: __init__.py  agents.py  api.py  cli.py  config.py  dbos_app.py  jobs.py  observability.py  security.py
harness/jobs_impl/: __init__.py
harness/jobs_impl/paperless/: README.md  __init__.py  agents.py  client.py  schemas.py  sheets.py  triggers.py  workflows.py
tests/: conftest.py  test_paperless_sheets.py  test_paperless_webhooks.py  test_paperless_workflows.py
