[project]
name = "workflow-explorer"
version = "0.1.0"
description = "An agent-harness framework (DBOS + Pydantic AI)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbos>=1.0",
    "pydantic-ai-slim[anthropic,openai,dbos]>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "logfire>=3.0",
]

[project.scripts]
run_jobs = "harness.cli:run_jobs_main"
populate_jobs = "harness.cli:populate_jobs_main"
serve = "harness.cli:serve_main"

[dependency-groups]
dev = [
    "poethepoet>=0.48.0",
    "ruff>=0.8",
    "ty>=0.0.1a1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harness"]

[tool.ruff]
src = ["."]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["harness"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ty.environment]
root = ["."]
python-version = "3.11"

[tool.poe.tasks]
format = [
    { cmd = "ruff check --fix .", help = "Fix lint and sort imports" },
    { cmd = "ruff format .", help = "Format code" },
]

validate = [
    { cmd = "ruff check .", help = "Lint (no fixes)" },
    { cmd = "ruff format --check .", help = "Check formatting" },
    { cmd = "ty check", help = "Typecheck" },
]
